syntax = "proto3";
option go_package = "github.com/project-mikan/umi.mikan/backend/infrastructure/grpc";

package auth;

// 新規登録用のリクエスト
message RegisterRequest {
  string user_id = 1;
  string password = 2;
}

// 新規登録のレスポンス
message RegisterResponse {
  string jwt = 1;
  string message = 2;
}

// ログイン用のリクエスト
message LoginRequest {
  string user_id = 1;
  string password = 2;
}

// ログインのレスポンス
message LoginResponse {
  string jwt = 1;
  string message = 2;
}

// 認証サービス定義
service AuthService {
  // 新規登録
  rpc Register(RegisterRequest) returns (RegisterResponse);

  // ログイン
  rpc Login(LoginRequest) returns (LoginResponse);
}
